Bit of CSS to prevent table overlap cross grid boundaries

--- a/Prism/static/Prism/style.css
+++ b/Prism/static/Prism/style.css
@@ -1,19 +1,13 @@
-.container-grid {
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        padding: 10px;
-    }
-.container-div {
-        /*border: 1px dashed gray; */
-        padding: 10px; 
-        text-align: right; 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-.col-md-auto {
+.col-md-auto, .col-md-4, .col-md-8 {
     text-align: right; 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: end;
+    overflow-x: auto;
+}
+.table {
+    align-self: start;
+}
+.pagination {
+    align-self: center;
 }
